deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping
spec:
  selector:
    app: ping
  ports:
    - name: grpc
      port: 50505
      protocol: TCP
      targetPort: 50505
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
  type: NodePort
