deployments/grpc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grpc-ingress-rules
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
    - hosts:  
      - gping.thingz.io
      secretName: tls-secret
  rules:
    - host: gping.thingz.io
      http:
        paths:
          - path: /
            backend:
              serviceName: ping
              servicePort: 50505
