deployments/http-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-ingress-rules
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:  
      - ping.thingz.io
      secretName: tls-secret
  rules:
    - host: ping.thingz.io
      http:
        paths:
          - path: /
            backend:
              serviceName: ping
              servicePort: 8080
